Add tintable image view for support prelollipop

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ram="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,6 +10,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="horizontal">
+
+        <ramilgabdrakhmanov.imagedrawcompare.TintableImageView
+            android:id="@+id/iv_image0"
+            style="@style/TestableImageView"
+            android:src="@drawable/cake"
+            ram:supportTint="@color/color_red_btn" />
 
         <ramilgabdrakhmanov.imagedrawcompare.MeasurableImageView
             android:id="@+id/iv_image1"
@@ -83,11 +90,10 @@
 
         <Button
             android:id="@+id/btn_add_tint"
-            android:text="Add tint"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Add tint" />
     </LinearLayout>
-
 
 
     <TextView
