--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,17 @@
         android:layout_gravity="center"
         android:orientation="horizontal">
 
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:clickable="true"
+            android:src="@drawable/clickable_cake" />
 
         <ramilgabdrakhmanov.imagedrawcompare.TintableImageView
-           android:layout_width="24dp"
-            android:layout_height="24dp"
+           android:layout_width="100dp"
+            android:layout_height="100dp"
             android:clickable="true"
-            android:src="@drawable/selector_cake_ffff0000_ff00ff00" />
+            android:src="@drawable/clickable_cakea" />
 
         <ramilgabdrakhmanov.imagedrawcompare.TintableImageView
             android:id="@+id/iv_image0"
